# shapecast

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: evidence-model.md
examples/: README.md  events.jsonl  profile_api.py
scripts/: smoke.sh
src/shapecast/: __init__.py  __main__.py  cli.py  errors.py  formats.py  loader.py  profile.py  report.py  schema.py
tests/: conftest.py  test_cli.py  test_examples.py  test_formats.py  test_loader.py  test_profile.py  test_report.py  test_schema.py
