[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapecast"
version = "0.1.0"
description = "Infer JSON Schema from example payloads, with per-field type and presence statistics: occurrence counts, conflicts, nullability rates."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["json-schema", "schema-inference", "jsonl", "api-documentation", "data-profiling", "cli", "quicktype"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: File Formats :: JSON",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
shapecast = "shapecast.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/shapecast"
Repository = "https://github.com/JaydenCJ/shapecast"
Issues = "https://github.com/JaydenCJ/shapecast/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
